@@ -2,6 +2,9 @@ The last version increases of all libraries were on 2024-03-07
 
 API changes, most recent first:
 
+2025-01-03 - xxxxxxxxxx - lavc 61.29.100 - codec_id.h
+  Add AV_CODEC_ID_JPEGXL_ANIM.
+
 2025-01-xx - xxxxxxxxxx - lavu 59.54.100 - frame.h
   Add AV_CH_LAYOUT_5POINT1POINT2 and AV_CHANNEL_LAYOUT_5POINT1POINT2.
 
