@@ -328,6 +328,7 @@ enum AVCodecID {
     AV_CODEC_ID_LEAD,
     AV_CODEC_ID_DNXUC,
     AV_CODEC_ID_RV60,
+    AV_CODEC_ID_JPEGXL_ANIM,
 
     /* various PCM "codecs" */
     AV_CODEC_ID_FIRST_AUDIO = 0x10000,     ///< A dummy id pointing at the start of audio codecs
